# react-bazel-example

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  LICENSE  README.md  WORKSPACE  docker-compose-app.yml  docker-compose-base.yml  docker-compose-client.yml  package-lock.json  package.json  tsconfig.json
src/: BUILD.bazel  app.tsx  index.html
src/backend/: BUILD  BUILD.bazel  index.html  server.ts
src/backend/src/: FriendServlet.java
src/backend/webapp/WEB-INF/: web.xml
src/frontend/: BUILD.bazel  app.tsx  index.html  main.tsx  rollup.config.js
src/frontend/config/: BUILD.bazel  api.config.ts
src/frontend/friend/: BUILD.bazel  friend-service.ts  friend.tsx
src/frontend/mod1/friends/: friends.tsx
src/frontend/mod1/friends/friend1/: BUILD.bazel
src/frontend/mod1/friends/friend2/: friend.tsx
src/frontend/mod10/friends/: friends.tsx
src/frontend/mod10/friends/friend10/: friend.tsx
src/frontend/mod11/friends/: friends.tsx
src/frontend/mod11/friends/friend1/: friend.tsx
src/frontend/mod11/friends/friend7/: friend.tsx
src/frontend/mod12/friends/: friends.tsx
src/frontend/mod13/friends/: friends.tsx
src/frontend/mod13/friends/friend3/: friend.tsx
src/frontend/mod14/friends/: friends.tsx
src/frontend/mod15/friends/: friends.tsx
src/frontend/mod16/friends/: friends.tsx
src/frontend/mod16/friends/friend1/: friend.tsx
src/frontend/mod17/friends/: friends.tsx
src/frontend/mod17/friends/friend8/: friend.tsx
src/frontend/mod18/friends/: friends.tsx
src/frontend/mod19/friends/: friends.tsx
src/frontend/mod2/friends/: friends.tsx
src/frontend/mod20/friends/: friends.tsx
src/frontend/mod3/friends/: friends.tsx
src/frontend/mod4/friends/: friends.tsx
src/frontend/mod4/friends/friend4/: friend.tsx
src/frontend/mod5/friends/: friends.tsx
src/frontend/mod5/friends/friend9/: friend.tsx
src/frontend/mod6/friends/: friends.tsx
src/frontend/mod6/friends/friend6/: friend.tsx
src/frontend/mod7/friends/: friends.tsx
src/frontend/mod7/friends/friend5/: friend.tsx
src/frontend/mod8/friends/: friends.tsx
src/frontend/mod9/friends/: friend-service.ts  friends.tsx
src/frontend/module1/: BUILD.bazel  mod.tsx
src/frontend/module1/mod1/friends/: BUILD.bazel  friends.tsx
src/frontend/module1/mod10/friends/: BUILD.bazel  friends.tsx
src/frontend/module1/mod11/friends/: BUILD.bazel
src/frontend/module1/mod12/friends/: BUILD.bazel
src/frontend/module1/mod13/friends/: BUILD.bazel
src/frontend/module1/mod14/friends/: BUILD.bazel  friends.tsx
src/frontend/module1/mod15/friends/: BUILD.bazel
src/frontend/module1/mod16/friends/: BUILD.bazel  friends.tsx
src/frontend/module1/mod17/friends/: BUILD.bazel
src/frontend/module1/mod18/friends/: BUILD.bazel
src/frontend/module1/mod19/friends/: BUILD.bazel
src/frontend/module1/mod2/friends/: BUILD.bazel
src/frontend/module1/mod20/friends/: BUILD.bazel
src/frontend/module1/mod21/friends/: BUILD.bazel
src/frontend/module1/mod22/friends/: BUILD.bazel
src/frontend/module1/mod23/friends/: BUILD.bazel  friends.tsx
src/frontend/module1/mod24/friends/: BUILD.bazel
src/frontend/module1/mod25/friends/: BUILD.bazel
src/frontend/module1/mod26/friends/: BUILD.bazel
src/frontend/module1/mod27/friends/: BUILD.bazel
src/frontend/module1/mod28/friends/: BUILD.bazel
src/frontend/module1/mod29/friends/: BUILD.bazel
src/frontend/module1/mod3/friends/: BUILD.bazel
src/frontend/module1/mod30/friends/: BUILD.bazel
src/frontend/module1/mod31/friends/: BUILD.bazel
src/frontend/module1/mod32/friends/: BUILD.bazel
src/frontend/module1/mod33/friends/: BUILD.bazel  friends.tsx
src/frontend/module1/mod34/friends/: BUILD.bazel
src/frontend/module1/mod35/friends/: BUILD.bazel
src/frontend/module1/mod36/friends/: BUILD.bazel
src/frontend/module1/mod37/friends/: BUILD.bazel
src/frontend/module1/mod38/friends/: BUILD.bazel
src/frontend/module1/mod39/friends/: BUILD.bazel
src/frontend/module1/mod4/friends/: BUILD.bazel  friends.tsx
src/frontend/module1/mod40/friends/: BUILD.bazel
src/frontend/module1/mod5/friends/: BUILD.bazel
src/frontend/module1/mod6/friends/: BUILD.bazel
src/frontend/module1/mod7/friends/: BUILD.bazel  friends.tsx
src/frontend/module1/mod8/friends/: BUILD.bazel
src/frontend/module1/mod9/friends/: BUILD.bazel
src/frontend/module10/: BUILD.bazel  mod.tsx
src/frontend/module10/mod1/friends/: BUILD.bazel
src/frontend/module10/mod10/friends/: BUILD.bazel
src/frontend/module10/mod11/friends/: BUILD.bazel
src/frontend/module10/mod12/friends/: BUILD.bazel  friends.tsx
src/frontend/module10/mod13/friends/: BUILD.bazel  friends.tsx
src/frontend/module10/mod14/friends/: BUILD.bazel  friends.tsx
src/frontend/module10/mod15/friends/: BUILD.bazel  friends.tsx
src/frontend/module10/mod16/friends/: BUILD.bazel
src/frontend/module10/mod17/friends/: BUILD.bazel  friends.tsx
src/frontend/module10/mod18/friends/: BUILD.bazel
src/frontend/module10/mod19/friends/: BUILD.bazel
src/frontend/module10/mod2/friends/: BUILD.bazel
src/frontend/module10/mod20/friends/: BUILD.bazel
src/frontend/module11/: BUILD.bazel  mod.tsx
src/frontend/module12/: BUILD.bazel  mod.tsx
src/frontend/module13/: BUILD.bazel  mod.tsx
src/frontend/module14/: BUILD.bazel  mod.tsx
src/frontend/module15/: BUILD.bazel  mod.tsx
src/frontend/module16/: BUILD.bazel  mod.tsx
src/frontend/module17/: BUILD.bazel  mod.tsx
src/frontend/module18/: BUILD.bazel  mod.tsx
src/frontend/module19/: BUILD.bazel  mod.tsx
src/frontend/module2/: BUILD.bazel  mod.tsx
src/frontend/module20/: BUILD.bazel  mod.tsx
src/frontend/module3/: BUILD.bazel  mod.tsx
src/frontend/module4/: BUILD.bazel  mod.tsx
src/frontend/module5/: BUILD.bazel  mod.tsx
src/frontend/module6/: BUILD.bazel  mod.tsx
src/frontend/module7/: BUILD.bazel  mod.tsx
src/frontend/module8/: BUILD.bazel  mod.tsx
src/frontend/module9/: BUILD.bazel  mod.tsx
src/model/: BUILD.bazel  friend.proto  index.d.ts  index.ts
src/styles/: BUILD.bazel  styles.scss
(+891 files in other folders)
