package(default_visibility = ["//visibility:public"])

exports_files([
  "tsconfig.json",
])

filegroup(
    name = "node_modules",
    srcs = glob(["/".join([
        "node_modules",
        pkg,
        "**",
        ext,
    ]) for pkg in [
        "react",
        "react-dom",
        "@types",
        "typescript"
    ] for ext in [
        "*.js",
        "*.json",
        "*.d.ts",
    ]]),
)
