package(default_visibility = ["//visibility:public"])

exports_files([
  "tsconfig.json",
])

filegroup(
    name = "node_modules",
    srcs = glob([
        "node_modules/typescript/**",
        "node_modules/@types/**",
        "node_modules/react/**",
        "node_modules/tsutils/**",
        "node_modules/tslib/**",
        "node_modules/long/**",
        "node_modules/protobufjs/**",
        "node_modules/bytebuffer/**",
        "node_modules/react-dom/**",
    ]),
)
