package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["app.tsx"],
    tsconfig = "//:tsconfig.json"
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    additional_root_paths = [
        "react_samples/node_modules/react/umd",
        "react_samples/node_modules/react-dom/umd",
    ],
    port = 4000,
    entry_module = "react_samples/src/app",
    serving_path = "/bundle.min.js",
    deps = [":src"],
    static_files = [
        ":index.html",
        "//:node_modules/react/umd/react.development.js",
        "//:node_modules/react-dom/umd/react-dom.development.js"
    ],
)
