load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "pkg_web")

ts_library(
    name = "backend_ts",
    srcs = ["server.ts"],
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/node",
        "@npm//express"
    ]
)

filegroup(
    name = "api_js",
    srcs = ["backend_ts"],
    output_group = "es5_sources",
)

pkg_web(
    name = "prodapp",
    srcs = [
        "//src/frontend:bundle-es2015.min"
    ]
)

nodejs_binary(
    name = "backend",
    data = [
        ":backend_ts",
         "@npm//express",
         ":prodapp",
         "@npm//@types/react",
         "@npm//react",
         "@npm//react-dom",
         ":index.html"
    ],
    entry_point = "api_js",
)
