package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["main.tsx", "app.tsx"],
    tsconfig = "//:tsconfig.json",
    deps = [
       "//src/model",
       "//src/frontend/friend:src",
       "@npm//react",
       "@npm//@types/react",
       "@npm//react-dom",
       "@npm//@types/react-dom",
    ]
)
 
load("@npm_bazel_typescript//:index.bzl", "ts_devserver")

ts_devserver(
    name = "devserver",
    additional_root_paths = [
        "npm/node_modules/react/umd",
        "npm/node_modules/react-dom/umd",
        "react_samples/src/styles"
    ],
    port = 9999,
    serving_path = "/bundle.min.js",
    deps = [":src"],
    data = ["//src/styles"],
    static_files = [
        ":index.html",
        "@npm//node_modules/react:umd/react.development.js",
        "@npm//node_modules/react-dom:umd/react-dom.development.js"
    ],
)
