package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library", "ts_devserver")

ts_library(
    name = "src",
    srcs = ["main.tsx", "app.tsx"],
    tsconfig = "//:tsconfig.json",
    deps = [
       "//src/model",
       "//src/frontend/module20:src",
       "//src/frontend/module19:src",
       "//src/frontend/module18:src",
       "//src/frontend/module17:src",
       "//src/frontend/module16:src",
       "//src/frontend/module15:src",
       "//src/frontend/module14:src",
       "//src/frontend/module13:src",
       "//src/frontend/module12:src",
       "//src/frontend/module11:src",
       "//src/frontend/module10:src",
       "//src/frontend/module9:src",
       "//src/frontend/module8:src",
       "//src/frontend/module7:src",
       "//src/frontend/module6:src",
       "//src/frontend/module5:src",
       "//src/frontend/module4:src",
       "//src/frontend/module3:src",
       "//src/frontend/module2:src",
       "//src/frontend/module1:src",
       "@npm//@types/react",
       "@npm//react",
       "@npm//react-dom"
       
    ]
)
 
ts_devserver(
    name = "devserver",
    additional_root_paths = [
        "react_samples/node_modules/react/umd",
        "react_samples/node_modules/react-dom/umd",
    ],
    port = 9999,
    serving_path = "/bundle.min.js",
    #entry_module = "react_samples/src/frontend/main",
    deps = [":src"],
    static_files = [
        ":index.html",
        "//:node_modules/react/umd/react.development.js",
        "//:node_modules/react-dom/umd/react-dom.development.js"
    ],
)
