package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@npm_bazel_terser//:index.bzl", "terser_minified")

ts_library(
    name = "src",
    srcs = ["main.tsx", "app.tsx"],
    tsconfig = "//:tsconfig.json",
    deps = [
       "//src/model",
       "//src/frontend/module20:src",
       "//src/frontend/module19:src",
       "//src/frontend/module18:src",
       "//src/frontend/module17:src",
       "//src/frontend/module16:src",
       "//src/frontend/module15:src",
       "//src/frontend/module14:src",
       "//src/frontend/module13:src",
       "//src/frontend/module12:src",
       "//src/frontend/module11:src",
       "//src/frontend/module10:src",
       "//src/frontend/module9:src",
       "//src/frontend/module8:src",
       "//src/frontend/module7:src",
       "//src/frontend/module6:src",
       "//src/frontend/module5:src",
       "//src/frontend/module4:src",
       "//src/frontend/module3:src",
       "//src/frontend/module2:src",
        "//src/frontend/module1:src",
       "@npm//@types/react",
       "@npm//react",
       "@npm//react-dom"
       
    ]
)

rollup_bundle(
    name = "bundle-es2015",
    entry_points = {":main.ts": "index"},
    config_file = "rollup.config.js",
    deps = [
        ":src",
        "@npm//rollup-plugin-commonjs",
        "@npm//rollup-plugin-node-resolve",
        "@npm//@types/react",
        "@npm//@types/react-dom",
        "@npm//react",
        "@npm//react-dom",
        "@npm//rollup-plugin-replace"
    ],
)

terser_minified(
    name = "bundle-es2015.min",
    src = ":bundle-es2015",
)
 
