package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_proto_library")

proto_library(
    name = "friend_proto",
    srcs = ["friend.proto"],
)

ts_proto_library(
    name = "friend_ts_proto",
    deps = [":friend_proto"],
)

java_proto_library(
    name = "friend_java_proto",
    deps = [":friend_proto"],
)

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "model",
    srcs = glob(["index.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [":friend_ts_proto"]
)