package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_proto_library")

proto_library(
    name = "friend_proto",
    srcs = ["friend.proto"],
)

ts_proto_library(
    name = "friend_ts_proto",
    deps = [":friend_proto"],
)

java_proto_library(
    name = "friend_java_proto",
    deps = [":friend_proto"],
)

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "model",
    srcs = glob(["index.ts"]),
    tsconfig = "//:tsconfig.json",
    deps = [":friend_ts_proto"]
)