package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module1/mod1/friends:src",
        "//src/frontend/module1/mod2/friends:src",
        "//src/frontend/module1/mod3/friends:src",
        "//src/frontend/module1/mod4/friends:src",
        "//src/frontend/module1/mod5/friends:src",
        "//src/frontend/module1/mod6/friends:src",
        "//src/frontend/module1/mod7/friends:src",
        "//src/frontend/module1/mod8/friends:src",
        "//src/frontend/module1/mod9/friends:src",
        "//src/frontend/module1/mod10/friends:src",
        "//src/frontend/module1/mod11/friends:src",
        "//src/frontend/module1/mod12/friends:src",
        "//src/frontend/module1/mod13/friends:src",
        "//src/frontend/module1/mod14/friends:src",
        "//src/frontend/module1/mod15/friends:src",
        "//src/frontend/module1/mod16/friends:src",
        "//src/frontend/module1/mod17/friends:src",
        "//src/frontend/module1/mod18/friends:src",
        "//src/frontend/module1/mod19/friends:src",
        "//src/frontend/module1/mod20/friends:src",
        "//src/frontend/module1/mod21/friends:src",
        "//src/frontend/module1/mod22/friends:src",
        "//src/frontend/module1/mod23/friends:src",
        "//src/frontend/module1/mod24/friends:src",
        "//src/frontend/module1/mod25/friends:src",
        "//src/frontend/module1/mod26/friends:src",
        "//src/frontend/module1/mod27/friends:src",
        "//src/frontend/module1/mod28/friends:src",
        "//src/frontend/module1/mod29/friends:src",
        "//src/frontend/module1/mod30/friends:src",
        "//src/frontend/module1/mod31/friends:src",
        "//src/frontend/module1/mod32/friends:src",
        "//src/frontend/module1/mod33/friends:src",
        "//src/frontend/module1/mod34/friends:src",
        "//src/frontend/module1/mod35/friends:src",
        "//src/frontend/module1/mod36/friends:src",
        "//src/frontend/module1/mod37/friends:src",
        "//src/frontend/module1/mod38/friends:src",
        "//src/frontend/module1/mod39/friends:src",
        "//src/frontend/module1/mod40/friends:src",
        "//src/model"
    ]
)
