package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module10/mod1/friends:src",
        "//src/frontend/module10/mod2/friends:src",
        "//src/frontend/module10/mod3/friends:src",
        "//src/frontend/module10/mod4/friends:src",
        "//src/frontend/module10/mod5/friends:src",
        "//src/frontend/module10/mod6/friends:src",
        "//src/frontend/module10/mod7/friends:src",
        "//src/frontend/module10/mod8/friends:src",
        "//src/frontend/module10/mod9/friends:src",
        "//src/frontend/module10/mod10/friends:src",
        "//src/frontend/module10/mod11/friends:src",
        "//src/frontend/module10/mod12/friends:src",
        "//src/frontend/module10/mod13/friends:src",
        "//src/frontend/module10/mod14/friends:src",
        "//src/frontend/module10/mod15/friends:src",
        "//src/frontend/module10/mod16/friends:src",
        "//src/frontend/module10/mod17/friends:src",
        "//src/frontend/module10/mod18/friends:src",
        "//src/frontend/module10/mod19/friends:src",
        "//src/frontend/module10/mod20/friends:src",
        "//src/frontend/module10/mod21/friends:src",
        "//src/frontend/module10/mod22/friends:src",
        "//src/frontend/module10/mod23/friends:src",
        "//src/frontend/module10/mod24/friends:src",
        "//src/frontend/module10/mod25/friends:src",
        "//src/frontend/module10/mod26/friends:src",
        "//src/frontend/module10/mod27/friends:src",
        "//src/frontend/module10/mod28/friends:src",
        "//src/frontend/module10/mod29/friends:src",
        "//src/frontend/module10/mod30/friends:src",
        "//src/frontend/module10/mod31/friends:src",
        "//src/frontend/module10/mod32/friends:src",
        "//src/frontend/module10/mod33/friends:src",
        "//src/frontend/module10/mod34/friends:src",
        "//src/frontend/module10/mod35/friends:src",
        "//src/frontend/module10/mod36/friends:src",
        "//src/frontend/module10/mod37/friends:src",
        "//src/frontend/module10/mod38/friends:src",
        "//src/frontend/module10/mod39/friends:src",
        "//src/frontend/module10/mod40/friends:src",
        "//src/model"
    ]
)
