package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module11/mod1/friends:src",
        "//src/frontend/module11/mod2/friends:src",
        "//src/frontend/module11/mod3/friends:src",
        "//src/frontend/module11/mod4/friends:src",
        "//src/frontend/module11/mod5/friends:src",
        "//src/frontend/module11/mod6/friends:src",
        "//src/frontend/module11/mod7/friends:src",
        "//src/frontend/module11/mod8/friends:src",
        "//src/frontend/module11/mod9/friends:src",
        "//src/frontend/module11/mod10/friends:src",
        "//src/frontend/module11/mod11/friends:src",
        "//src/frontend/module11/mod12/friends:src",
        "//src/frontend/module11/mod13/friends:src",
        "//src/frontend/module11/mod14/friends:src",
        "//src/frontend/module11/mod15/friends:src",
        "//src/frontend/module11/mod16/friends:src",
        "//src/frontend/module11/mod17/friends:src",
        "//src/frontend/module11/mod18/friends:src",
        "//src/frontend/module11/mod19/friends:src",
        "//src/frontend/module11/mod20/friends:src",
        "//src/frontend/module11/mod21/friends:src",
        "//src/frontend/module11/mod22/friends:src",
        "//src/frontend/module11/mod23/friends:src",
        "//src/frontend/module11/mod24/friends:src",
        "//src/frontend/module11/mod25/friends:src",
        "//src/frontend/module11/mod26/friends:src",
        "//src/frontend/module11/mod27/friends:src",
        "//src/frontend/module11/mod28/friends:src",
        "//src/frontend/module11/mod29/friends:src",
        "//src/frontend/module11/mod30/friends:src",
        "//src/frontend/module11/mod31/friends:src",
        "//src/frontend/module11/mod32/friends:src",
        "//src/frontend/module11/mod33/friends:src",
        "//src/frontend/module11/mod34/friends:src",
        "//src/frontend/module11/mod35/friends:src",
        "//src/frontend/module11/mod36/friends:src",
        "//src/frontend/module11/mod37/friends:src",
        "//src/frontend/module11/mod38/friends:src",
        "//src/frontend/module11/mod39/friends:src",
        "//src/frontend/module11/mod40/friends:src",
        "//src/model"
    ]
)
