package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module12/mod1/friends:src",
        "//src/frontend/module12/mod2/friends:src",
        "//src/frontend/module12/mod3/friends:src",
        "//src/frontend/module12/mod4/friends:src",
        "//src/frontend/module12/mod5/friends:src",
        "//src/frontend/module12/mod6/friends:src",
        "//src/frontend/module12/mod7/friends:src",
        "//src/frontend/module12/mod8/friends:src",
        "//src/frontend/module12/mod9/friends:src",
        "//src/frontend/module12/mod10/friends:src",
        "//src/frontend/module12/mod11/friends:src",
        "//src/frontend/module12/mod12/friends:src",
        "//src/frontend/module12/mod13/friends:src",
        "//src/frontend/module12/mod14/friends:src",
        "//src/frontend/module12/mod15/friends:src",
        "//src/frontend/module12/mod16/friends:src",
        "//src/frontend/module12/mod17/friends:src",
        "//src/frontend/module12/mod18/friends:src",
        "//src/frontend/module12/mod19/friends:src",
        "//src/frontend/module12/mod20/friends:src",
        "//src/frontend/module12/mod21/friends:src",
        "//src/frontend/module12/mod22/friends:src",
        "//src/frontend/module12/mod23/friends:src",
        "//src/frontend/module12/mod24/friends:src",
        "//src/frontend/module12/mod25/friends:src",
        "//src/frontend/module12/mod26/friends:src",
        "//src/frontend/module12/mod27/friends:src",
        "//src/frontend/module12/mod28/friends:src",
        "//src/frontend/module12/mod29/friends:src",
        "//src/frontend/module12/mod30/friends:src",
        "//src/frontend/module12/mod31/friends:src",
        "//src/frontend/module12/mod32/friends:src",
        "//src/frontend/module12/mod33/friends:src",
        "//src/frontend/module12/mod34/friends:src",
        "//src/frontend/module12/mod35/friends:src",
        "//src/frontend/module12/mod36/friends:src",
        "//src/frontend/module12/mod37/friends:src",
        "//src/frontend/module12/mod38/friends:src",
        "//src/frontend/module12/mod39/friends:src",
        "//src/frontend/module12/mod40/friends:src",
        "//src/model"
    ]
)
