package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module13/mod1/friends:src",
        "//src/frontend/module13/mod2/friends:src",
        "//src/frontend/module13/mod3/friends:src",
        "//src/frontend/module13/mod4/friends:src",
        "//src/frontend/module13/mod5/friends:src",
        "//src/frontend/module13/mod6/friends:src",
        "//src/frontend/module13/mod7/friends:src",
        "//src/frontend/module13/mod8/friends:src",
        "//src/frontend/module13/mod9/friends:src",
        "//src/frontend/module13/mod10/friends:src",
        "//src/frontend/module13/mod11/friends:src",
        "//src/frontend/module13/mod12/friends:src",
        "//src/frontend/module13/mod13/friends:src",
        "//src/frontend/module13/mod14/friends:src",
        "//src/frontend/module13/mod15/friends:src",
        "//src/frontend/module13/mod16/friends:src",
        "//src/frontend/module13/mod17/friends:src",
        "//src/frontend/module13/mod18/friends:src",
        "//src/frontend/module13/mod19/friends:src",
        "//src/frontend/module13/mod20/friends:src",
        "//src/frontend/module13/mod21/friends:src",
        "//src/frontend/module13/mod22/friends:src",
        "//src/frontend/module13/mod23/friends:src",
        "//src/frontend/module13/mod24/friends:src",
        "//src/frontend/module13/mod25/friends:src",
        "//src/frontend/module13/mod26/friends:src",
        "//src/frontend/module13/mod27/friends:src",
        "//src/frontend/module13/mod28/friends:src",
        "//src/frontend/module13/mod29/friends:src",
        "//src/frontend/module13/mod30/friends:src",
        "//src/frontend/module13/mod31/friends:src",
        "//src/frontend/module13/mod32/friends:src",
        "//src/frontend/module13/mod33/friends:src",
        "//src/frontend/module13/mod34/friends:src",
        "//src/frontend/module13/mod35/friends:src",
        "//src/frontend/module13/mod36/friends:src",
        "//src/frontend/module13/mod37/friends:src",
        "//src/frontend/module13/mod38/friends:src",
        "//src/frontend/module13/mod39/friends:src",
        "//src/frontend/module13/mod40/friends:src",
        "//src/model"
    ]
)
