package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module14/mod1/friends:src",
        "//src/frontend/module14/mod2/friends:src",
        "//src/frontend/module14/mod3/friends:src",
        "//src/frontend/module14/mod4/friends:src",
        "//src/frontend/module14/mod5/friends:src",
        "//src/frontend/module14/mod6/friends:src",
        "//src/frontend/module14/mod7/friends:src",
        "//src/frontend/module14/mod8/friends:src",
        "//src/frontend/module14/mod9/friends:src",
        "//src/frontend/module14/mod10/friends:src",
        "//src/frontend/module14/mod11/friends:src",
        "//src/frontend/module14/mod12/friends:src",
        "//src/frontend/module14/mod13/friends:src",
        "//src/frontend/module14/mod14/friends:src",
        "//src/frontend/module14/mod15/friends:src",
        "//src/frontend/module14/mod16/friends:src",
        "//src/frontend/module14/mod17/friends:src",
        "//src/frontend/module14/mod18/friends:src",
        "//src/frontend/module14/mod19/friends:src",
        "//src/frontend/module14/mod20/friends:src",
        "//src/frontend/module14/mod21/friends:src",
        "//src/frontend/module14/mod22/friends:src",
        "//src/frontend/module14/mod23/friends:src",
        "//src/frontend/module14/mod24/friends:src",
        "//src/frontend/module14/mod25/friends:src",
        "//src/frontend/module14/mod26/friends:src",
        "//src/frontend/module14/mod27/friends:src",
        "//src/frontend/module14/mod28/friends:src",
        "//src/frontend/module14/mod29/friends:src",
        "//src/frontend/module14/mod30/friends:src",
        "//src/frontend/module14/mod31/friends:src",
        "//src/frontend/module14/mod32/friends:src",
        "//src/frontend/module14/mod33/friends:src",
        "//src/frontend/module14/mod34/friends:src",
        "//src/frontend/module14/mod35/friends:src",
        "//src/frontend/module14/mod36/friends:src",
        "//src/frontend/module14/mod37/friends:src",
        "//src/frontend/module14/mod38/friends:src",
        "//src/frontend/module14/mod39/friends:src",
        "//src/frontend/module14/mod40/friends:src",
        "//src/model"
    ]
)
