package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module15/mod1/friends:src",
        "//src/frontend/module15/mod2/friends:src",
        "//src/frontend/module15/mod3/friends:src",
        "//src/frontend/module15/mod4/friends:src",
        "//src/frontend/module15/mod5/friends:src",
        "//src/frontend/module15/mod6/friends:src",
        "//src/frontend/module15/mod7/friends:src",
        "//src/frontend/module15/mod8/friends:src",
        "//src/frontend/module15/mod9/friends:src",
        "//src/frontend/module15/mod10/friends:src",
        "//src/frontend/module15/mod11/friends:src",
        "//src/frontend/module15/mod12/friends:src",
        "//src/frontend/module15/mod13/friends:src",
        "//src/frontend/module15/mod14/friends:src",
        "//src/frontend/module15/mod15/friends:src",
        "//src/frontend/module15/mod16/friends:src",
        "//src/frontend/module15/mod17/friends:src",
        "//src/frontend/module15/mod18/friends:src",
        "//src/frontend/module15/mod19/friends:src",
        "//src/frontend/module15/mod20/friends:src",
        "//src/frontend/module15/mod21/friends:src",
        "//src/frontend/module15/mod22/friends:src",
        "//src/frontend/module15/mod23/friends:src",
        "//src/frontend/module15/mod24/friends:src",
        "//src/frontend/module15/mod25/friends:src",
        "//src/frontend/module15/mod26/friends:src",
        "//src/frontend/module15/mod27/friends:src",
        "//src/frontend/module15/mod28/friends:src",
        "//src/frontend/module15/mod29/friends:src",
        "//src/frontend/module15/mod30/friends:src",
        "//src/frontend/module15/mod31/friends:src",
        "//src/frontend/module15/mod32/friends:src",
        "//src/frontend/module15/mod33/friends:src",
        "//src/frontend/module15/mod34/friends:src",
        "//src/frontend/module15/mod35/friends:src",
        "//src/frontend/module15/mod36/friends:src",
        "//src/frontend/module15/mod37/friends:src",
        "//src/frontend/module15/mod38/friends:src",
        "//src/frontend/module15/mod39/friends:src",
        "//src/frontend/module15/mod40/friends:src",
        "//src/model"
    ]
)
