package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module16/mod1/friends:src",
        "//src/frontend/module16/mod2/friends:src",
        "//src/frontend/module16/mod3/friends:src",
        "//src/frontend/module16/mod4/friends:src",
        "//src/frontend/module16/mod5/friends:src",
        "//src/frontend/module16/mod6/friends:src",
        "//src/frontend/module16/mod7/friends:src",
        "//src/frontend/module16/mod8/friends:src",
        "//src/frontend/module16/mod9/friends:src",
        "//src/frontend/module16/mod10/friends:src",
        "//src/frontend/module16/mod11/friends:src",
        "//src/frontend/module16/mod12/friends:src",
        "//src/frontend/module16/mod13/friends:src",
        "//src/frontend/module16/mod14/friends:src",
        "//src/frontend/module16/mod15/friends:src",
        "//src/frontend/module16/mod16/friends:src",
        "//src/frontend/module16/mod17/friends:src",
        "//src/frontend/module16/mod18/friends:src",
        "//src/frontend/module16/mod19/friends:src",
        "//src/frontend/module16/mod20/friends:src",
        "//src/frontend/module16/mod21/friends:src",
        "//src/frontend/module16/mod22/friends:src",
        "//src/frontend/module16/mod23/friends:src",
        "//src/frontend/module16/mod24/friends:src",
        "//src/frontend/module16/mod25/friends:src",
        "//src/frontend/module16/mod26/friends:src",
        "//src/frontend/module16/mod27/friends:src",
        "//src/frontend/module16/mod28/friends:src",
        "//src/frontend/module16/mod29/friends:src",
        "//src/frontend/module16/mod30/friends:src",
        "//src/frontend/module16/mod31/friends:src",
        "//src/frontend/module16/mod32/friends:src",
        "//src/frontend/module16/mod33/friends:src",
        "//src/frontend/module16/mod34/friends:src",
        "//src/frontend/module16/mod35/friends:src",
        "//src/frontend/module16/mod36/friends:src",
        "//src/frontend/module16/mod37/friends:src",
        "//src/frontend/module16/mod38/friends:src",
        "//src/frontend/module16/mod39/friends:src",
        "//src/frontend/module16/mod40/friends:src",
        "//src/model"
    ]
)
