package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module2/mod1/friends:src",
        "//src/frontend/module2/mod2/friends:src",
        "//src/frontend/module2/mod3/friends:src",
        "//src/frontend/module2/mod4/friends:src",
        "//src/frontend/module2/mod5/friends:src",
        "//src/frontend/module2/mod6/friends:src",
        "//src/frontend/module2/mod7/friends:src",
        "//src/frontend/module2/mod8/friends:src",
        "//src/frontend/module2/mod9/friends:src",
        "//src/frontend/module2/mod10/friends:src",
        "//src/frontend/module2/mod11/friends:src",
        "//src/frontend/module2/mod12/friends:src",
        "//src/frontend/module2/mod13/friends:src",
        "//src/frontend/module2/mod14/friends:src",
        "//src/frontend/module2/mod15/friends:src",
        "//src/frontend/module2/mod16/friends:src",
        "//src/frontend/module2/mod17/friends:src",
        "//src/frontend/module2/mod18/friends:src",
        "//src/frontend/module2/mod19/friends:src",
        "//src/frontend/module2/mod20/friends:src",
        "//src/frontend/module2/mod21/friends:src",
        "//src/frontend/module2/mod22/friends:src",
        "//src/frontend/module2/mod23/friends:src",
        "//src/frontend/module2/mod24/friends:src",
        "//src/frontend/module2/mod25/friends:src",
        "//src/frontend/module2/mod26/friends:src",
        "//src/frontend/module2/mod27/friends:src",
        "//src/frontend/module2/mod28/friends:src",
        "//src/frontend/module2/mod29/friends:src",
        "//src/frontend/module2/mod30/friends:src",
        "//src/frontend/module2/mod31/friends:src",
        "//src/frontend/module2/mod32/friends:src",
        "//src/frontend/module2/mod33/friends:src",
        "//src/frontend/module2/mod34/friends:src",
        "//src/frontend/module2/mod35/friends:src",
        "//src/frontend/module2/mod36/friends:src",
        "//src/frontend/module2/mod37/friends:src",
        "//src/frontend/module2/mod38/friends:src",
        "//src/frontend/module2/mod39/friends:src",
        "//src/frontend/module2/mod40/friends:src",
        "//src/model"
    ]
)
