package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module20/mod1/friends:src",
        "//src/frontend/module20/mod2/friends:src",
        "//src/frontend/module20/mod3/friends:src",
        "//src/frontend/module20/mod4/friends:src",
        "//src/frontend/module20/mod5/friends:src",
        "//src/frontend/module20/mod6/friends:src",
        "//src/frontend/module20/mod7/friends:src",
        "//src/frontend/module20/mod8/friends:src",
        "//src/frontend/module20/mod9/friends:src",
        "//src/frontend/module20/mod10/friends:src",
        "//src/frontend/module20/mod11/friends:src",
        "//src/frontend/module20/mod12/friends:src",
        "//src/frontend/module20/mod13/friends:src",
        "//src/frontend/module20/mod14/friends:src",
        "//src/frontend/module20/mod15/friends:src",
        "//src/frontend/module20/mod16/friends:src",
        "//src/frontend/module20/mod17/friends:src",
        "//src/frontend/module20/mod18/friends:src",
        "//src/frontend/module20/mod19/friends:src",
        "//src/frontend/module20/mod20/friends:src",
        "//src/frontend/module20/mod21/friends:src",
        "//src/frontend/module20/mod22/friends:src",
        "//src/frontend/module20/mod23/friends:src",
        "//src/frontend/module20/mod24/friends:src",
        "//src/frontend/module20/mod25/friends:src",
        "//src/frontend/module20/mod26/friends:src",
        "//src/frontend/module20/mod27/friends:src",
        "//src/frontend/module20/mod28/friends:src",
        "//src/frontend/module20/mod29/friends:src",
        "//src/frontend/module20/mod30/friends:src",
        "//src/frontend/module20/mod31/friends:src",
        "//src/frontend/module20/mod32/friends:src",
        "//src/frontend/module20/mod33/friends:src",
        "//src/frontend/module20/mod34/friends:src",
        "//src/frontend/module20/mod35/friends:src",
        "//src/frontend/module20/mod36/friends:src",
        "//src/frontend/module20/mod37/friends:src",
        "//src/frontend/module20/mod38/friends:src",
        "//src/frontend/module20/mod39/friends:src",
        "//src/frontend/module20/mod40/friends:src",
        "//src/model"
    ]
)
