package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module3/mod1/friends:src",
        "//src/frontend/module3/mod2/friends:src",
        "//src/frontend/module3/mod3/friends:src",
        "//src/frontend/module3/mod4/friends:src",
        "//src/frontend/module3/mod5/friends:src",
        "//src/frontend/module3/mod6/friends:src",
        "//src/frontend/module3/mod7/friends:src",
        "//src/frontend/module3/mod8/friends:src",
        "//src/frontend/module3/mod9/friends:src",
        "//src/frontend/module3/mod10/friends:src",
        "//src/frontend/module3/mod11/friends:src",
        "//src/frontend/module3/mod12/friends:src",
        "//src/frontend/module3/mod13/friends:src",
        "//src/frontend/module3/mod14/friends:src",
        "//src/frontend/module3/mod15/friends:src",
        "//src/frontend/module3/mod16/friends:src",
        "//src/frontend/module3/mod17/friends:src",
        "//src/frontend/module3/mod18/friends:src",
        "//src/frontend/module3/mod19/friends:src",
        "//src/frontend/module3/mod20/friends:src",
        "//src/frontend/module3/mod21/friends:src",
        "//src/frontend/module3/mod22/friends:src",
        "//src/frontend/module3/mod23/friends:src",
        "//src/frontend/module3/mod24/friends:src",
        "//src/frontend/module3/mod25/friends:src",
        "//src/frontend/module3/mod26/friends:src",
        "//src/frontend/module3/mod27/friends:src",
        "//src/frontend/module3/mod28/friends:src",
        "//src/frontend/module3/mod29/friends:src",
        "//src/frontend/module3/mod30/friends:src",
        "//src/frontend/module3/mod31/friends:src",
        "//src/frontend/module3/mod32/friends:src",
        "//src/frontend/module3/mod33/friends:src",
        "//src/frontend/module3/mod34/friends:src",
        "//src/frontend/module3/mod35/friends:src",
        "//src/frontend/module3/mod36/friends:src",
        "//src/frontend/module3/mod37/friends:src",
        "//src/frontend/module3/mod38/friends:src",
        "//src/frontend/module3/mod39/friends:src",
        "//src/frontend/module3/mod40/friends:src",
        "//src/model"
    ]
)
