package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module4/mod1/friends:src",
        "//src/frontend/module4/mod2/friends:src",
        "//src/frontend/module4/mod3/friends:src",
        "//src/frontend/module4/mod4/friends:src",
        "//src/frontend/module4/mod5/friends:src",
        "//src/frontend/module4/mod6/friends:src",
        "//src/frontend/module4/mod7/friends:src",
        "//src/frontend/module4/mod8/friends:src",
        "//src/frontend/module4/mod9/friends:src",
        "//src/frontend/module4/mod10/friends:src",
        "//src/frontend/module4/mod11/friends:src",
        "//src/frontend/module4/mod12/friends:src",
        "//src/frontend/module4/mod13/friends:src",
        "//src/frontend/module4/mod14/friends:src",
        "//src/frontend/module4/mod15/friends:src",
        "//src/frontend/module4/mod16/friends:src",
        "//src/frontend/module4/mod17/friends:src",
        "//src/frontend/module4/mod18/friends:src",
        "//src/frontend/module4/mod19/friends:src",
        "//src/frontend/module4/mod20/friends:src",
        "//src/frontend/module4/mod21/friends:src",
        "//src/frontend/module4/mod22/friends:src",
        "//src/frontend/module4/mod23/friends:src",
        "//src/frontend/module4/mod24/friends:src",
        "//src/frontend/module4/mod25/friends:src",
        "//src/frontend/module4/mod26/friends:src",
        "//src/frontend/module4/mod27/friends:src",
        "//src/frontend/module4/mod28/friends:src",
        "//src/frontend/module4/mod29/friends:src",
        "//src/frontend/module4/mod30/friends:src",
        "//src/frontend/module4/mod31/friends:src",
        "//src/frontend/module4/mod32/friends:src",
        "//src/frontend/module4/mod33/friends:src",
        "//src/frontend/module4/mod34/friends:src",
        "//src/frontend/module4/mod35/friends:src",
        "//src/frontend/module4/mod36/friends:src",
        "//src/frontend/module4/mod37/friends:src",
        "//src/frontend/module4/mod38/friends:src",
        "//src/frontend/module4/mod39/friends:src",
        "//src/frontend/module4/mod40/friends:src",
        "//src/model"
    ]
)
