package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "src",
    srcs = ["mod.tsx"],
    deps = [
        "//src/frontend/module6/mod1/friends:src",
        "//src/frontend/module6/mod2/friends:src",
        "//src/frontend/module6/mod3/friends:src",
        "//src/frontend/module6/mod4/friends:src",
        "//src/frontend/module6/mod5/friends:src",
        "//src/frontend/module6/mod6/friends:src",
        "//src/frontend/module6/mod7/friends:src",
        "//src/frontend/module6/mod8/friends:src",
        "//src/frontend/module6/mod9/friends:src",
        "//src/frontend/module6/mod10/friends:src",
        "//src/frontend/module6/mod11/friends:src",
        "//src/frontend/module6/mod12/friends:src",
        "//src/frontend/module6/mod13/friends:src",
        "//src/frontend/module6/mod14/friends:src",
        "//src/frontend/module6/mod15/friends:src",
        "//src/frontend/module6/mod16/friends:src",
        "//src/frontend/module6/mod17/friends:src",
        "//src/frontend/module6/mod18/friends:src",
        "//src/frontend/module6/mod19/friends:src",
        "//src/frontend/module6/mod20/friends:src",
        "//src/frontend/module6/mod21/friends:src",
        "//src/frontend/module6/mod22/friends:src",
        "//src/frontend/module6/mod23/friends:src",
        "//src/frontend/module6/mod24/friends:src",
        "//src/frontend/module6/mod25/friends:src",
        "//src/frontend/module6/mod26/friends:src",
        "//src/frontend/module6/mod27/friends:src",
        "//src/frontend/module6/mod28/friends:src",
        "//src/frontend/module6/mod29/friends:src",
        "//src/frontend/module6/mod30/friends:src",
        "//src/frontend/module6/mod31/friends:src",
        "//src/frontend/module6/mod32/friends:src",
        "//src/frontend/module6/mod33/friends:src",
        "//src/frontend/module6/mod34/friends:src",
        "//src/frontend/module6/mod35/friends:src",
        "//src/frontend/module6/mod36/friends:src",
        "//src/frontend/module6/mod37/friends:src",
        "//src/frontend/module6/mod38/friends:src",
        "//src/frontend/module6/mod39/friends:src",
        "//src/frontend/module6/mod40/friends:src",
        "//src/model"
    ]
)
